--- a/RPCExample/pom.xml
+++ b/RPCExample/pom.xml
@@ -21,7 +21,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.7</version>
+			<version>1.7.2</version>
 		</dependency>
 
 		<!-- Spring -->
@@ -41,20 +41,21 @@
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
-			<version>4.0.24.Final</version>
+			<version>4.0.2.Final</version>
 		</dependency>
 
 		<!-- Protostuff -->
 		<dependency>
-			<groupId>com.dyuproject.protostuff</groupId>
+			<groupId>io.protostuff</groupId>
 			<artifactId>protostuff-core</artifactId>
-			<version>1.0.8</version>
+			<version>1.3.5</version>
 		</dependency>
 		<dependency>
-			<groupId>com.dyuproject.protostuff</groupId>
+			<groupId>io.protostuff</groupId>
 			<artifactId>protostuff-runtime</artifactId>
-			<version>1.0.8</version>
+			<version>1.3.5</version>
 		</dependency>
+
 
 		<!-- ZooKeeper -->
 		<dependency>
