--- a/RPCExample/pom.xml
+++ b/RPCExample/pom.xml
@@ -24,16 +24,22 @@
 			<version>1.7.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>4.1.1.RELEASE</version>
+			<version>3.2.12.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>4.1.1.RELEASE</version>
+			<version>3.2.12.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
 
