--- a/pom.xml
+++ b/pom.xml
@@ -210,5 +210,7 @@
 		<module>lombok</module>
 		<module>SpringBootWithDataRestExample</module>
 		<module>mybatisexample</module>
+		<module>SpringShellDemo</module>
+		<module>KotlinExample</module>
 	</modules>
 </project>
