--- a/mybatisexample/pom.xml
+++ b/mybatisexample/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>mybatisexample</artifactId>
 
+    <properties>
+        <dao.target.dir>src/main/java</dao.target.dir>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -23,5 +27,23 @@
             <version>5.1.18</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.0</version>
+                <executions>
+                    <execution>
+                        <id>Generate MyBatis Artifacts</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
