--- a/RPCExample/pom.xml
+++ b/RPCExample/pom.xml
@@ -90,5 +90,12 @@
 			<artifactId>cglib</artifactId>
 			<version>3.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.101tec</groupId>
+			<artifactId>zkclient</artifactId>
+			<version>0.4</version>
+		</dependency>
+
 	</dependencies>
 </project>
