--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,18 @@
 			<artifactId>ivy</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.8.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>2.4.5</version>
+		</dependency>
 	</dependencies>
 
 	<modules>
@@ -213,5 +225,6 @@
 		<module>SpringShellDemo</module>
 		<module>KotlinExample</module>
 		<module>JGroupsDemo</module>
+		<module>GroovyExample</module>
 	</modules>
 </project>
