创建一个SpringBoot应用

--- a/pom.xml
+++ b/pom.xml
@@ -233,7 +233,7 @@
 	<modules>
 		<module>RPCExample</module>
 		<module>lombok</module>
-		<module>SpringBootWithDataRestExample</module>
+		<!--<module>SpringBootWithDataRestExample</module>-->
 		<module>mybatisexample</module>
 		<module>SpringShellDemo</module>
 		<module>KotlinExample</module>
