--- a/pom.xml
+++ b/pom.xml
@@ -264,5 +264,6 @@
 		<module>how-to-use-guava</module>
 		<module>ejb-demo</module>
 		<module>SpockDemo</module>
+		<module>AMQDemo</module>
 	</modules>
 </project>
